--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #ec5252;
+  background: #b3b3b3;
 }
 
 
